--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,104 @@
 .App {
   text-align: center;
 }
+/* 
+.backgroundImage {
+  max-width: 100%;
+  max-height: 50%;
+  background-size: cover;
+} */
+
+.missionsCard {
+  display: flex;
+  border: 5px white solid;
+  border-radius: 10px;
+  width: 220px;
+  margin: 15px;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+}
+
+.missionsHolder {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
+.SolarHeader {
+  /* position: absolute; */
+  display: flex;
+  flex-direction: row;
+  justify-self: center;
+  align-self: center;
+  font-size: larger;
+  color: white;
+}
+
+.solarMissions {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  border: 5px white solid;
+  border-radius: 7px;
+  margin: 15px;
+}
+
+.SolarPlanetsHolder {
+  border: 5px white solid;
+  border-radius: 7px;
+  margin: 15px;
+  display: flex;
+  flex-direction: column;
+}
+
+.planetsHolder {
+  display: flex;
+  flex-direction: row;
+  margin-top: 30px;
+  justify-content: space-around;
+}
+
+.planetsTitle {
+  color: white;
+  display: flex;
+  align-self: center;
+  justify-items: center;
+  position: absolute;
+}
+
+.headline {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.SolarSystemMain {
+  background-image: url('images/background.png');
+  position: absolute;
+  width: 100vw;
+  /* height: 100vh; */
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+}
+
+.planetCard {
+  width: 130px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.planetCard img {
+  width: 100px;
+  /* height: 100px; */
+}
+
+.planetCard p {
+  color: white;
+}
